Fixed issue where there was white space on the right of the page.  Closes #3

--- a/src/main/assets/styles/main.less
+++ b/src/main/assets/styles/main.less
@@ -127,6 +127,10 @@ body {
 html, body {
     height: 100%;
 }
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
 .wrapper {
     min-height: 100%;
     height: auto !important;
